fixed the backgorund image in full screen but still need to take a lot at it on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -435,15 +435,15 @@ a:hover, a:focus, a:active {
   transition: .3s all ease;
 }
 
-.probootstrap-navbar.scrolled.awake {
+/*.probootstrap-navbar.scrolled.awake {
   -webkit-transform: translateY(0%);
   transform: translateY(0%);
-}
+}*/
 
-.probootstrap-navbar.scrolled.sleep {
+/*.probootstrap-navbar.scrolled.sleep {
   -webkit-transform: translateY(-100%);
   transform: translateY(-100%);
-}
+}*/
 
 .probootstrap-navbar.scrolled .navbar-brand {
   top: 30px;
